fix(home): fix deprecated NF icons in waybar

--- a/config/waybar/modules/pulseaudio.jsonc
+++ b/config/waybar/modules/pulseaudio.jsonc
@@ -1,6 +1,6 @@
     "pulseaudio": {
         "format": "{icon} {volume}",
-        "format-muted": "婢",
+        "format-muted": "󰖁",
         "on-click": "pavucontrol -t 3",
         "on-click-middle": "volumecontrol.sh -o m",
         "on-scroll-up": "volumecontrol.sh -o i",
@@ -20,7 +20,7 @@
 
     "pulseaudio#microphone": {
         "format": "{format_source}",
-        "format-source": "",
+        "format-source": "󰍬",
         "format-source-muted": "",
         "on-click": "pavucontrol -t 4",
         "on-click-middle": "volumecontrol.sh -i m",
