--- a/config/waybar/modules/wallchange.jsonc
+++ b/config/waybar/modules/wallchange.jsonc
@@ -1,5 +1,5 @@
     "custom/wallchange": {
-        "format": "{}",
+        "format": "󰊠{}",
         "exec": "echo ; echo 󰆊 switch wallpaper",
         "on-click": "swimctl next",
         "on-click-right": "swimctl previous",
