fix(home): resolve issues with Hyprland keybinds

--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -58,6 +58,6 @@ windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 
-windowrulev2 = stayfocused,class:^(com.github.Aylur.ags)$,title:(Keyboard Shortcuts)
+windowrulev2 = nofocus,class:^(com.github.Aylur.ags)$,title:(Keyboard Shortcuts)
 windowrulev2 = pin,class:^(com.github.Aylur.ags)$,title:(Keyboard Shortcuts)
 windowrulev2 = dimaround,class:^(com.github.Aylur.ags)$,title:(Keyboard Shortcuts)
