feat(home): configure correct keyboard layout for Moonlander

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -57,6 +57,13 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     force_no_accel = 1
+    resolve_binds_by_sym = 1
+}
+
+device {
+    name = zsa-technology-labs-moonlander-mark-i
+    kb_layout = de
+    kb_variant =
 }
 
 gestures {
