feat(home): tweak Wezterm config for Linux

--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -18,6 +18,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(Spotify)$
 windowrulev2 = opacity 0.80 0.80,class:^(Code)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
 windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
+windowrulev2 = opacity 0.80 0.80,class:^(org.wezfurlong.wezterm)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
