feat(home): improve touchpad config in Hyprland

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -56,7 +56,7 @@ input {
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    force_no_accel = 1
+    force_no_accel = 0
     resolve_binds_by_sym = 1
 }
 
@@ -69,6 +69,8 @@ device {
 gestures {
     workspace_swipe = true
     workspace_swipe_fingers = 3
+    workspace_swipe_invert = true
+    workspace_swipe_cancel_ratio = 0.25
 }
 
 # Per-device config possible!
