--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -12,19 +12,16 @@ $mainMod = SUPER # windows key
 # assign apps
 $term = kitty
 $editor = code
-$file = dolphin
+$file = nautilus
 $browser = firefox
 
 # Window/Session actions
 bind = $mainMod, Q, killactive
-bind = ALT, F4, killactive
-bind = $mainMod, delete, exit, # kill hyperland session
 bind = $mainMod, W, togglefloating, # toggle the window on focus to float
 bind = $mainMod, G, togglegroup, # toggle the window on focus to float
 bind = ALT, return, fullscreen, # toggle the window on focus to fullscreen
-bind = $mainMod, L, exec, swaylock # lock screen
+bind = $mainMod, L, exec, hyprlock # lock screen
 bind = $mainMod, backspace, exec, wlogout-launcher-hyprland 1 # logout menu
-bind = $CONTROL, ESCAPE, exec, systemctl-toggle --user waybar.service
 
 # Application shortcuts
 bind = $mainMod, T, exec, $term  # open terminal
@@ -46,41 +43,18 @@ bind = $mainMod ALT, right, exec, swimctl next # next wallpaper
 bind = $mainMod ALT, left, exec, swimctl previous # previous wallpaper
 
 # Audio control
-bindl  = , F10, exec, volumecontrol.sh -o m # toggle audio mute
-bindel = , F11, exec, volumecontrol.sh -o d # decrease volume
-bindel = , F12, exec, volumecontrol.sh -o i # increase volume
-bindl  = , XF86AudioMute, exec, volumecontrol.sh -o m # toggle audio mute
-bindl  = , XF86AudioMicMute, exec, volumecontrol.sh -i m # toggle microphone mute
-bindel = , XF86AudioLowerVolume, exec, volumecontrol.sh -o d # decrease volume
-bindel = , XF86AudioRaiseVolume, exec, volumecontrol.sh -o i # increase volume
+bindl  = , XF86AudioMute, exec, pamixer -t # toggle audio mute
+bindl  = , XF86AudioMicMute, exec, pamixer -t --default-source # toggle microphone mute
+bindel = , XF86AudioLowerVolume, exec, pamixer -d 5 # decrease volume
+bindel = , XF86AudioRaiseVolume, exec, pamixer -i 5 # increase volume
 bindl  = , XF86AudioPlay, exec, playerctl play-pause
 bindl  = , XF86AudioPause, exec, playerctl play-pause
 bindl  = , XF86AudioNext, exec, playerctl next
 bindl  = , XF86AudioPrev, exec, playerctl previous
 
-# Waybar Control
-bind = $mainMod ALT, up, exec, waybar-confgen-hyprdots n # next waybar mode
-bind = $mainMod ALT, down, exec, waybar-confgen-hyprdots p # previous waybar mode
-
-# Custom Scripts
-bind = $CONTROL SHIFT, ESCAPE, exec, kitty -e htop  # open htop/btop if installed or default to top (system monitor)
-bind = $mainMod, K, exec, keyboardswitch.sh # change keyboard layout
-
 # Brightness control
-bindel = , XF86MonBrightnessUp, exec, brightnesscontrol.sh i # increase brightness
-bindel = , XF86MonBrightnessDown, exec, brightnesscontrol.sh d # decrease brightness
-
-# Screenshot/Screencapture
-bind = $mainMod, P, exec, screenshot.sh s # drag to snip an area / click on a window to print it
-bind = $mainMod ALT, P, exec, screenshot.sh m # print focused monitor
-bind = ,print, exec, screenshot.sh p  # print all monitor outputs
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-bind = ALT, Tab, movefocus, d
+bindel = , XF86MonBrightnessUp, exec, brightnessctl set 5%+ # increase brightness
+bindel = , XF86MonBrightnessDown, exec, brightnessctl set 5%- # decrease brightness
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -100,24 +74,6 @@ bind = $mainMod CTRL, left, workspace, r-1
 
 # move to the first empty workspace instantly with mainMod + CTRL + [↓]
 bind = $mainMod CTRL, down, workspace, empty 
-
-# Resize windows
-binde = $mainMod SHIFT, right, resizeactive, 30 0
-binde = $mainMod SHIFT, left, resizeactive, -30 0
-binde = $mainMod SHIFT, up, resizeactive, 0 -30
-binde = $mainMod SHIFT, down, resizeactive, 0 30
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Move active window to a relative workspace with mainMod + CTRL + ALT + [←→]
 bind = $mainMod CTRL ALT, right, movetoworkspace, r+1
@@ -144,14 +100,6 @@ bind = $mainMod, S, togglespecialworkspace,
 # Toggle Layout
 bind = $mainMod, J, togglesplit, # dwindle
 
-# Move window silently to workspace Super + Alt + [0-9]
-bind = $mainMod ALT, 1, movetoworkspacesilent, 1
-bind = $mainMod ALT, 2, movetoworkspacesilent, 2
-bind = $mainMod ALT, 3, movetoworkspacesilent, 3
-bind = $mainMod ALT, 4, movetoworkspacesilent, 4
-bind = $mainMod ALT, 5, movetoworkspacesilent, 5
-bind = $mainMod ALT, 6, movetoworkspacesilent, 6
-bind = $mainMod ALT, 7, movetoworkspacesilent, 7
-bind = $mainMod ALT, 8, movetoworkspacesilent, 8
-bind = $mainMod ALT, 9, movetoworkspacesilent, 9
-bind = $mainMod ALT, 0, movetoworkspacesilent, 10
+# 1Password
+bind = CTRL SHIFT, space, exec, 1password --quick-access
+
