feat(home): use preferred swiping for switching between workspaces on Hyprland

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -69,7 +69,7 @@ device {
 gestures {
     workspace_swipe = true
     workspace_swipe_fingers = 3
-    workspace_swipe_invert = true
+    workspace_swipe_invert = false
     workspace_swipe_cancel_ratio = 0.25
 }
 
