chore: update inputs

--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -64,3 +64,5 @@ windowrulev2 = pin,class:^(com.github.Aylur.ags)$,title:(Keyboard Shortcuts)
 windowrulev2 = dimaround,class:^(com.github.Aylur.ags)$,title:(Keyboard Shortcuts)
 
 windowrulev2 = float,class:^(nm-openconnect-auth-dialog)$
+
+windowrulev2 = float,class:^(thunderbird)$,initialTitle:^(Calendar Reminders)$
