chore(home): adjust config for upgraded Hyprland

--- a/config/hypr/entry.conf
+++ b/config/hypr/entry.conf
@@ -67,11 +67,9 @@ device {
 }
 
 gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
-    workspace_swipe_invert = false
     workspace_swipe_cancel_ratio = 0.25
 }
+gesture = 3, horizontal, workspace
 
 # Per-device config possible!
 
