--- a/garnix.yaml
+++ b/garnix.yaml
@@ -1,6 +1,7 @@
 builds:
   exclude:
     - nixosConfigurations.installer
+    - packages.x86_64-linux.sddm-theme-corners
   include:
     - '*.x86_64-linux.*'
     - homeConfigurations.*
